- Added styling to the body and fixed some of the divs. - Added a new section for Contact Info content. - Struggling to fix the alignment of the Button and Icon, will figure out in the future.

--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -48,6 +48,7 @@ header .nav-btn {
 
 footer {
     position: fixed;
+    margin-top: 100vh;
     background-color: var(--mainColor);
     bottom: 0;
     left: 0;
@@ -63,33 +64,61 @@ h1 {
 }
 
 .container {
-    border: 3px solid #fff;
-    padding: 10px;
     height: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
 }
 
 .float {
+    position: relative;
     display: inline-grid;
-    width: 50%;
+    align-items: center;
+    width: 40%;
     float: left;
     padding: 20px;
-    padding-top: 15px;
-    padding-bottom: 50px;
+    padding-bottom: 20px;
+    padding-right: 10px;
+    padding-left: 10px;
+    margin-right: 60px;
     border: 3px solid rgb(182, 114, 246);
     background-color:#dabbf1;
-    border-radius: 10px;
+    border-radius: 20px;
     text-align: center;
+    justify-content: center;
 }
 
 /* Float with No Border */
 .float1 {
+    position: relative;
     display: inline-grid;
-    width: 50%;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
     float: left;
     padding: 20px;
     padding-top: 35px;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
+    margin-right: 30px;
     text-align: center;
+}
+
+/* Paragraph float with No Border */
+.float2 {
+    position: relative;
+    display: inline-grid;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    float: left;
+    padding: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-right: 30px;
+    text-align: center;
+    font-size: 25px;
 }
 
 /* Section */
@@ -101,6 +130,10 @@ h1 {
     text-align: center;
     justify-content: center;
     font-size: 1.5rem;
+}
+
+body {
+    background-color:#b7ef93;
 }
 
 @media only screen and (max-width: 1024px){
